Fixed app according to task requirements

--- a/websockets/client.html
+++ b/websockets/client.html
@@ -10,21 +10,11 @@
     const wsuri = "ws://127.0.0.1:8080";
 
     window.onload = function() {
-
-        console.log("onload");
-
         sock = new WebSocket(wsuri);
-
-        sock.onopen = function() {
-            console.log("connected to " + wsuri);
-        }
-
-        sock.onclose = function(e) {
-            console.log("connection closed (" + e.code + ")");
-        }
-
         sock.onmessage = function(e) {
             console.log("message received: " + e.data);
+            console.log("message sent");
+            sock.send("Message from frontend");
             const list = document.getElementById('events-list');
             const listItem = document.createElement('li');
             listItem.appendChild(document.createTextNode(e.data));
@@ -32,19 +22,11 @@
         }
     };
 
-    function send() {
-        const msg = document.getElementById('message').value;
-        sock.send(msg);
-    };
 </script>
 <h1>WebSocket Echo Test</h1>
 <form>
-    <p>
-        Message: <input id="message" type="text" value="Hello, world!">
-    </p>
     <ul id="events-list">
     </ul>
 </form>
-<button onclick="send();">Send Message</button>
 </body>
 </html>
