--- a/websockets/client.html
+++ b/websockets/client.html
@@ -10,7 +10,11 @@
     const wsuri = "ws://127.0.0.1:8080";
 
     window.onload = function() {
+
+        console.log("onload");
+
         sock = new WebSocket(wsuri);
+
         sock.onmessage = function(e) {
             console.log("message received: " + e.data);
             console.log("message sent");
@@ -21,6 +25,7 @@
             list.appendChild(listItem);
         }
     };
+
 
 </script>
 <h1>WebSocket Echo Test</h1>
